<?xml version="1.0"?>
<package format="2">
  <name>real_mcts</name>
  <version>0.0.0</version>
  <description>The real_mcts package</description>

  <maintainer email="hs@todo.todo">hs</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  
  <export>
  </export>
</package>
